objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Apttus__Import_Offline_Document__c</fullName>
        <description>Conditionally show the &quot;Import Offline Document&quot; custom link if the status category is not &quot;In Effect&quot; or &quot;Expired&quot; or &quot;Terminated&quot; or &quot;Amended&quot; or &quot;Cancelled&quot;</description>
        <formula>IF (NOT(OR(ISPICKVAL(Apttus__Status_Category__c, &quot;In Effect&quot;), ISPICKVAL(Apttus__Status_Category__c, &quot;Expired&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Terminated&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Amended&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Cancelled&quot;))), HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Offline Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InitiateTermination__c</fullName>
        <description>Conditionally show the &quot;Initiate Termination&quot; custom button.</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Terminated&quot;)))),HYPERLINK(&quot;/apex/Apttus__AgreementTerminationInitiate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_InitiateTermination&quot;, &quot;Initiate Termination&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiate Termination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Initiation_Type__c</fullName>
        <description>To indicate whether this record is being filed as an executed agreement or is being negotiated in the system</description>
        <label>Initiation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiate Contract</fullName>
                    <default>true</default>
                    <label>Negotiate Contract</label>
                </value>
                <value>
                    <fullName>Store Executed Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Internal_Renewal_Notification_Days__c</fullName>
        <description>Notification period prior to Renewal Notice Date when notification is sent out internally that renewal is approaching</description>
        <label>Internal Renewal Notification Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Internal_Renewal_Start_Date__c</fullName>
        <description>Date by which internal notice of internal renewal is approaching – Issue Renewal Notice Date less internal renewal notification days</description>
        <formula>Apttus__Renewal_Notice_Date__c  -   Apttus__Internal_Renewal_Notification_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__IsInternalReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates internal review was initiated</description>
        <label>Is Internal Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the agreement is locked for editing</description>
        <inlineHelpText>Indicates whether the agreement is locked for editing</inlineHelpText>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Is_System_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a system initiated updated. An update is triggered by the system during various lifecycle actions such as clone, amend, renew etc. The flag is set before the update and is reset when the update is initiated by a user.</description>
        <inlineHelpText>Indicates a system initiated update.</inlineHelpText>
        <label>Is System Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestDocId__c</fullName>
        <description>ID of the latest document version</description>
        <label>Latest Doc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Non_Standard_Legal_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether this agreement contains non-standard language</description>
        <label>Non Standard Legal Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Returned_Date__c</fullName>
        <description>Date other party returned signed agreement</description>
        <label>Other Party Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Sent_Date__c</fullName>
        <description>Date agreement was sent to other party for signatures</description>
        <label>Other Party Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_By_Unlisted__c</fullName>
        <description>Identifies other party signed by person that is not listed as a contact in salesforce</description>
        <label>Other Party Signed By (Unlisted)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to contact record to identify external signatory</description>
        <label>Other Party Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001Xl0MEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_Date__c</fullName>
        <description>Date when external signatory signed</description>
        <label>Other Party Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Other_Party_Signed_Title__c</fullName>
        <description>Title of person signing on bahalf of Other Party</description>
        <label>Other Party Signed Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Outstanding_Days__c</fullName>
        <description>Number of days between date agreement was today, if not returned as yet.  Esle number of days between returned and sent.</description>
        <formula>IF(ISNULL(  Apttus__Other_Party_Returned_Date__c ), TODAY () -   Apttus__Other_Party_Sent_Date__c ,   Apttus__Other_Party_Returned_Date__c   -   Apttus__Other_Party_Sent_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Owner_Expiration_Notice__c</fullName>
        <description>To indicate the number of days prior to expiration date that a notification needs to be sent to the owner</description>
        <label>Owner Expiration Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                    <default>true</default>
                    <label>90 Days</label>
                </value>
                <value>
                    <fullName>120 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Parent_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Child Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether agreement has an end date specified</description>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Primary Contact)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N50000001Xl0FEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Remaining_Contracted_Days__c</fullName>
        <description>If the agreement is In Effect, this value is calculated as Contract Duration Days less Contracted Days</description>
        <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;), (Apttus__Contract_Duration_Days__c &gt; 0), (Apttus__Contracted_Days__c &gt; 0)), (Apttus__Contract_Duration_Days__c - Apttus__Contracted_Days__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Renewal_Notice_Date__c</fullName>
        <description>Issue Renewal Notice Date = End Date - Renewal Notice Days</description>
        <formula>IF( NOT( ISNULL( Apttus__Contract_End_Date__c ) ) , Apttus__Contract_End_Date__c  -  Apttus__Renewal_Notice_Days__c  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Renewal_Notice_Days__c</fullName>
        <description>The number of days before end date when renewal notice is due</description>
        <label>Renewal Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Request_Date__c</fullName>
        <description>The date the agreement was requested</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__RetentionDate__c</fullName>
        <description>Date until to retain the record</description>
        <label>Retention Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__RetentionPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated retention policy</description>
        <label>Retention Policy</label>
        <referenceTo>Apttus__RetentionPolicy__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Risk_Rating__c</fullName>
        <description>This field allows users to track agreement risk rating</description>
        <label>Risk Rating</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Source__c</fullName>
        <description>Source of this contract – internal paper or third party contract</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other Party Paper</fullName>
                </value>
                <value>
                    <fullName>Helix Paper</fullName>
                    <default>true</default>
                    <label>Helix Paper</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Special_Terms__c</fullName>
        <description>Identifies any special terms related to contract</description>
        <label>Special Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Status_Category__c</fullName>
        <description>The higher level state of the agreement – In Authoring, In Effect, Expired, etc.  These are Apttus reserved values and cannot be changed.</description>
        <label>Status Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>In Authoring</fullName>
                </value>
                <value>
                    <fullName>In Signatures</fullName>
                </value>
                <value>
                    <fullName>In Filing</fullName>
                </value>
                <value>
                    <fullName>In Effect</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>The sub stage of an agreement – the status underneath a given status category.  These are generally modifiable by the customer except for the following values which are Apttus reserved to manage agreement lifecycles:

Request, Submitted Request,
Cancelled Request, In Amendment, Being Amended, Superseded, Activated, Expired, Internal Signatures, Author Contract, Expired, Terminated,  Ready for Signatures, Fully Signed, Signature Declined</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Status_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Request Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted Request</fullName>
                </value>
                <value>
                    <fullName>Approved Request</fullName>
                </value>
                <value>
                    <fullName>Cancelled Request</fullName>
                </value>
                <value>
                    <fullName>In Amendment</fullName>
                </value>
                <value>
                    <fullName>Author Contract</fullName>
                </value>
                <value>
                    <fullName>Language Approval</fullName>
                </value>
                <value>
                    <fullName>Language Approved</fullName>
                </value>
                <value>
                    <fullName>Internal Signatures</fullName>
                </value>
                <value>
                    <fullName>Other Party Signatures</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>Being Renewed</fullName>
                </value>
                <value>
                    <fullName>In Renewal</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Being Terminated</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>In Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>Other Party Review</fullName>
                </value>
                <value>
                    <fullName>Signature Declined</fullName>
                </value>
                <value>
                    <fullName>Ready for Signatures</fullName>
                </value>
                <value>
                    <fullName>Fully Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Submit_Request_Mode__c</fullName>
        <label>Submit Request Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Subtype__c</fullName>
        <description>The subtype of the agreement for a given agreement type</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Mutual MNDA</fullName>
                    <default>true</default>
                    <label>Mutual MNDA</label>
                </value>
                <value>
                    <fullName>One-Way (Individuals)</fullName>
                </value>
                <value>
                    <fullName>One-Way (Companies)</fullName>
                </value>
                <value>
                    <fullName>One-Way (Visitors)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Term_Months__c</fullName>
        <description>Indicates the duration in months of the contract from the start date</description>
        <label>Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__TerminationComments__c</fullName>
        <description>Termination Comments</description>
        <label>Termination Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Date__c</fullName>
        <description>Date contract terminated</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Notice_Days__c</fullName>
        <description>Notice period prior to termination</description>
        <label>Termination Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Notice_Issue_Date__c</fullName>
        <description>Date termination notice was sent / received</description>
        <label>Termination Notice Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Total_Contract_Value__c</fullName>
        <description>Total value of agreement</description>
        <label>Total Agreement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionAware__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this agreement is Version aware. This flag enables versioning on all documents of this agreement record, provided document versioning is enabled in custom settings.</description>
        <inlineHelpText>Indicates if this agreement is Version aware. This flag enables versioning on all documents of this agreement record, provided document versioning is enabled in custom settings.</inlineHelpText>
        <label>Version Aware</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Version_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Version__c</fullName>
        <defaultValue>0</defaultValue>
        <description>THIS FIELD IS OBSOLETE.  PLEASE DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <label>Version (OBSOLETE)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Workflow_Trigger_Created_From_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a transient agreement that may get deleted by the user. A new agreement is in transient state until the agreement is explicitly saved by the user. A new agreement is created by new, clone, amend, renew, create offline or create from opportunity methods. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient agreements are created .</description>
        <inlineHelpText>Indicates a transient agreement that may get deleted by the user. A new agreement is in transient state until the agreement is explicitly saved by the user.</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Workflow_Trigger_Viewed_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that gets set by the Generate Agreement scontrol when an agreement is generated.  This flag then becomes the trigger for workflow rules that get fired when the Generate Agreement action is completed.</description>
        <label>Workflow Trigger Generated Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Obligations__c</fullName>
        <description>Include the assignment obligations in the agreement (e.g. upon notice, with consent, within &quot;X&quot; period, etc.).</description>
        <inlineHelpText>Include the assignment obligations in the agreement (e.g. upon notice, with consent, within &quot;X&quot; period, etc.).</inlineHelpText>
        <label>Assignment Obligations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_Notice_Period__c</fullName>
        <description>If the agreement auto renews, include the notice period for termination prior to auto renew (e.g. 30 days prior to the end of the current term of the agreement, etc.).</description>
        <inlineHelpText>If the agreement auto renews, include the notice period for termination prior to auto renew (e.g. 30 days prior to the end of the current term of the agreement, etc.).</inlineHelpText>
        <label>Auto Renew Notice Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bundled_Product_Rev_Share__c</fullName>
        <label>Bundled Product Rev Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bundled_Products_Rev_Share_Detail__c</fullName>
        <label>Bundled Products Rev Share Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The business unit that has requested the agreement.</description>
        <inlineHelpText>The business unit that has requested the agreement.</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied Genomics</fullName>
                </value>
                <value>
                    <fullName>Bioinformatics</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Partnerships</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cldy_Company_Signed_By__c</fullName>
        <label>Company Signed By (Unlisted)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cldy_Is_Custom_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cldy_Total_Agreement_Value_Word_Format__c</fullName>
        <label>Total Agreement Value Word Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD - Andorra</fullName>
                </value>
                <value>
                    <fullName>AE - United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>AF - Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AG - Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>AI - Anguilla</fullName>
                </value>
                <value>
                    <fullName>AL - Albania</fullName>
                </value>
                <value>
                    <fullName>AM - Armenia</fullName>
                </value>
                <value>
                    <fullName>AO - Angola</fullName>
                </value>
                <value>
                    <fullName>AQ - Antarctica</fullName>
                </value>
                <value>
                    <fullName>AR - Argentina</fullName>
                </value>
                <value>
                    <fullName>AS - American Samoa</fullName>
                </value>
                <value>
                    <fullName>AT - Austria</fullName>
                </value>
                <value>
                    <fullName>AU - Australia</fullName>
                </value>
                <value>
                    <fullName>AW - Aruba</fullName>
                </value>
                <value>
                    <fullName>AZ - Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>BA - Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>BB - Barbados</fullName>
                </value>
                <value>
                    <fullName>BD - Bangladesh</fullName>
                </value>
                <value>
                    <fullName>BE - Belgium</fullName>
                </value>
                <value>
                    <fullName>BF - Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>BG - Bulgaria</fullName>
                </value>
                <value>
                    <fullName>BH - Bahrain</fullName>
                </value>
                <value>
                    <fullName>BI - Burundi</fullName>
                </value>
                <value>
                    <fullName>BJ - Benin</fullName>
                </value>
                <value>
                    <fullName>BL - Saint Barthelemy</fullName>
                </value>
                <value>
                    <fullName>BM - Bermuda</fullName>
                </value>
                <value>
                    <fullName>BN - Brunei</fullName>
                </value>
                <value>
                    <fullName>BO - Bolivia</fullName>
                </value>
                <value>
                    <fullName>BR - Brazil</fullName>
                </value>
                <value>
                    <fullName>BS - Bahamas, The</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Sleeve_Min_Volume_Commit__c</fullName>
        <description>The minimum volume commitment the partner is making under the Terms.</description>
        <inlineHelpText>The minimum volume commitment the partner is making under the Terms.</inlineHelpText>
        <label>Custom Sleeve Min. Volume Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Sleeve_Order_Period_Months__c</fullName>
        <description>Period of time the partner has to accept the custom sleeves.</description>
        <inlineHelpText>Period of time the partner has to accept the custom sleeves.</inlineHelpText>
        <label>Custom Sleeve Order Period (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Sleeve_Price__c</fullName>
        <description>Identifies the price per custom sleeve.</description>
        <inlineHelpText>Identifies the price per custom sleeve.</inlineHelpText>
        <label>Custom Sleeve Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Rights__c</fullName>
        <description>Data rights associated with the product (or products) being developed by partner.</description>
        <inlineHelpText>Data rights associated with the product (or products) being developed by partner.</inlineHelpText>
        <label>Data Rights</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Example_Minimum_Fees__c</fullName>
        <description>Example Minimum Fees, based on specific Panels.</description>
        <inlineHelpText>Example Minimum Fees, based on specific Panels.</inlineHelpText>
        <label>Example Minimum Fees</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>